--- a/tests/pipelines/tf-nat-gw-regression.yaml
+++ b/tests/pipelines/tf-nat-gw-regression.yaml
@@ -34,7 +34,7 @@ resources:
     storage:
       driver: s3
       bucket: {{tf_backend_bucket}}
-      bucket_path: {{tf_backend_path}}
+      bucket_path: terraform-google-nat-gateway/
       access_key_id: {{s3_compatible_access_key}}
       secret_access_key: {{s3_compatible_secret_key}}
       endpoint: https://storage.googleapis.com
