--- a/tests/pipelines/tf-nat-gw-regression.yaml
+++ b/tests/pipelines/tf-nat-gw-regression.yaml
@@ -12,34 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
  
-resource_types:
-- name: email
-  type: docker-image
-  source:
-    repository: pcfseceng/email-resource
-resources:
-- name: terraform-google-nat-gateway
-  type: git
-  source:
-    uri: {{tf_nat_gw_source_repo}}
-    branch: {{tf_nat_gw_source_branch}}
-- name: once-a-day
-  type: time
-  source:
-    interval: 1440m
-- name: send-an-email
-  type: email
-  source:
-    smtp:
-      host: {{smtp_host}}
-      port: {{smtp_port}}
-      username: {{smtp_username}}
-      password: {{smtp_password}}
-    from: concourse@vicnastea.io
-    to: [ {{maintainer_email}} ]
-
-
 jobs:
+
 ###
 # check-nat-region-map
 ###
@@ -48,7 +22,7 @@ jobs:
   - get: once-a-day
     trigger: true
 
-  - get: terraform-google-nat-gateway
+  - get: git
     trigger: false
 
   - task: check-nat-region-map
@@ -62,7 +36,7 @@ jobs:
       params:
         subject: email/subject-failed
         body: email/body-failed
-    file: terraform-google-nat-gateway/tests/tasks/check-nat-region-map.yaml
+    file: git/tests/tasks/check-nat-region-map.yaml
 
 ###
 # run-example-gke-zonal
@@ -73,16 +47,20 @@ jobs:
   - get: once-a-day
     trigger: true
 
-  - get: terraform-google-nat-gateway
+  - get: git
     trigger: false
 
   - task: run-example-gke-zonal
     params:
+      git_src: git
+      git_target: git
       service_account_json: {{service_account_json}}
       project_id: {{project_id}}
       backend_bucket: {{tf_backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-gke-zonal
+      example_dir: examples/gke-nat-gateway
+      infra_dir: git/tests/infra/example-gke-nat-gateway-zonal
       region: us-west1
       zone: us-west1-b
     on_failure:
@@ -90,7 +68,7 @@ jobs:
       params:
         subject: email/subject-failed
         body: email/body-failed
-    file: terraform-google-nat-gateway/tests/tasks/example-gke-nat-gateway-zonal.yaml
+    file: git/tests/tasks/example-gke-nat-gateway-zonal.yaml
 
 ###
 # run-example-gke-regional
@@ -101,16 +79,20 @@ jobs:
   - get: once-a-day
     trigger: true
 
-  - get: terraform-google-nat-gateway
+  - get: git
     trigger: false
 
   - task: run-example-gke-regional
     params:
+      git_src: git
+      git_target: git
       service_account_json: {{service_account_json}}
       project_id: {{project_id}}
       backend_bucket: {{tf_backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-gke-regional
+      example_dir: examples/gke-nat-gateway
+      infra_dir: git/tests/infra/example-gke-nat-gateway-regional
       region: us-central1
       zone: us-central1-f
     on_failure:
@@ -118,7 +100,7 @@ jobs:
       params:
         subject: email/subject-failed
         body: email/body-failed
-    file: terraform-google-nat-gateway/tests/tasks/example-gke-nat-gateway-regional.yaml
+    file: git/tests/tasks/example-gke-nat-gateway-regional.yaml
 
 ###
 # run-example-gke-private
@@ -129,16 +111,20 @@ jobs:
   - get: once-a-day
     trigger: true
 
-  - get: terraform-google-nat-gateway
+  - get: git
     trigger: false
 
   - task: run-example-gke-private
     params:
+      git_src: git
+      git_target: git
       service_account_json: {{service_account_json}}
       project_id: {{project_id}}
       backend_bucket: {{tf_backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-gke-private
+      example_dir: examples/gke-nat-gateway
+      infra_dir: git/tests/infra/example-gke-nat-gateway-private
       region: us-east1
       zone: us-east1-b
     on_failure:
@@ -146,7 +132,7 @@ jobs:
       params:
         subject: email/subject-failed
         body: email/body-failed
-    file: terraform-google-nat-gateway/tests/tasks/example-gke-nat-gateway-private.yaml
+    file: git/tests/tasks/example-gke-nat-gateway-private.yaml
   
 ###
 # run-example-ha-nat-gateway
@@ -157,27 +143,31 @@ jobs:
   - get: once-a-day
     trigger: true
 
-  - get: terraform-google-nat-gateway
+  - get: git
     trigger: false
 
   - task: test-example-ha-nat
     params:
+      git_src: git
+      git_target: git
       service_account_json: {{service_account_json}}
       project_id: {{project_id}}
       backend_bucket: {{tf_backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-ha
-      region: us-east4
+      example_dir: examples/ha-nat-gateway
       zone: us-east4-a
-      zone1: us-east4-a
-      zone2: us-east4-b
-      zone3: us-east4-c
+      TF_VAR_network_name: tf-ci-nat-ha
+      TF_VAR_region: us-east4
+      TF_VAR_zone1: us-east4-a
+      TF_VAR_zone2: us-east4-b
+      TF_VAR_zone3: us-east4-c
     on_failure:
       put: send-an-email
       params:
         subject: email/subject-failed
         body: email/body-failed
-    file: terraform-google-nat-gateway/tests/tasks/example-ha-nat-gateway.yaml
+    file: git/tests/tasks/example-ha-nat-gateway.yaml
 
 ###
 # run-example-lb-nat-gateway
@@ -188,24 +178,29 @@ jobs:
   - get: once-a-day
     trigger: true
 
-  - get: terraform-google-nat-gateway
+  - get: git
     trigger: false
   
   - task: test-example-lb-nat
     params:
+      git_src: git
+      git_target: git
       service_account_json: {{service_account_json}}
       project_id: {{project_id}}
       backend_bucket: {{tf_backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-lb
-      region: europe-west1
+      example_dir: examples/lb-http-nat-gateway
       zone: europe-west1-b
+      TF_VAR_network_name: tf-ci-nat-lb
+      TF_VAR_region: europe-west1
+      TF_VAR_zone: europe-west1-b
     on_failure:
       put: send-an-email
       params:
         subject: email/subject-failed
         body: email/body-failed
-    file: terraform-google-nat-gateway/tests/tasks/example-lb-nat-gateway.yaml
+    file: git/tests/tasks/example-lb-nat-gateway.yaml
 
 ###
 # run-example-multi-env
@@ -216,25 +211,74 @@ jobs:
   - get: once-a-day
     trigger: true
 
-  - get: terraform-google-nat-gateway
+  - get: git
     trigger: false
   
   - task: test-example-nat-multi-env
     params:
+      git_src: git
+      git_target: git
       service_account_json: {{service_account_json}}
       project_id: {{project_id}}
       backend_bucket: {{tf_backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-multi-env
-      production_network_name: tf-ci-multi-nat-production
-      production_mig_name: tf-ci-multi-nat-env-prod
-      staging_network_name: tf-ci-multi-nat-staging
-      staging_mig_name: tf-ci-multi-nat-env-staging
-      region: europe-west2
+      example_dir: examples/multiple-nat-environments
       zone: europe-west2-b
+      TF_VAR_production_network_name: tf-ci-multi-nat-production
+      TF_VAR_production_mig_name: tf-ci-multi-nat-env-prod
+      TF_VAR_staging_network_name: tf-ci-multi-nat-staging
+      TF_VAR_staging_mig_name: tf-ci-multi-nat-env-staging
+      TF_VAR_region: europe-west2
+      TF_VAR_zone: europe-west2-b
     on_failure:
       put: send-an-email
       params:
         subject: email/subject-failed
         body: email/body-failed
-    file: terraform-google-nat-gateway/tests/tasks/example-multi-env.yaml
+    file: git/tests/tasks/example-multi-env.yaml
+
+###
+# Resource types
+###
+resource_types:
+- name: git
+  type: docker-image
+  source:
+    repository: concourse/git-resource
+
+- name: time
+  type: docker-image
+  source:
+    repository: concourse/time-resource
+
+- name: email
+  type: docker-image
+  source:
+    repository: pcfseceng/email-resource
+
+###
+# Resources
+###
+resources:
+- name: git
+  type: git
+  source:
+    uri: {{tf_nat_gw_source_repo}}
+    branch: {{tf_nat_gw_source_branch}}
+
+- name: once-a-day
+  type: time
+  source:
+    interval: 1440m
+
+- name: send-an-email
+  type: email
+  source:
+    smtp:
+      host: {{smtp_host}}
+      port: {{smtp_port}}
+      username: {{smtp_username}}
+      password: {{smtp_password}}
+    from: concourse-tf@gcp.solutions
+    to: [ {{maintainer_email}} ]
