--- a/tests/pipelines/tf-nat-gw-regression.yaml
+++ b/tests/pipelines/tf-nat-gw-regression.yaml
@@ -239,6 +239,39 @@ jobs:
     file: git/tests/tasks/example-multi-env.yaml
 
 ###
+# run-example-module-disable
+###
+- name: run-example-module-disable
+  serial: true
+  plan:
+  - get: once-a-day
+    trigger: true
+
+  - get: git
+    trigger: false
+
+  - task: test-example-module-disable
+    params:
+      git_src: git
+      git_target: git
+      service_account_json: {{service_account_json}}
+      project_id: {{project_id}}
+      backend_bucket: {{tf_backend_bucket}}
+      backend_prefix: terraform-google-nat-gateway/
+      env_name: tf-ci-nat-ha
+      example_dir: examples/module-disable
+      zone: us-central1-f
+      TF_VAR_network_name: tf-ci-nat-disable
+      TF_VAR_region: us-central1
+      TF_VAR_zone: us-central1-f
+    on_failure:
+      put: send-an-email
+      params:
+        subject: email/subject-failed
+        body: email/body-failed
+    file: git/tests/tasks/example-module-disable.yaml
+
+###
 # Resource types
 ###
 resource_types:
