--- a/tests/pipelines/tf-nat-gw-pull-requests.yaml
+++ b/tests/pipelines/tf-nat-gw-pull-requests.yaml
@@ -379,6 +379,66 @@ jobs:
     file: git/tests/tasks/example-multi-env.yaml
 
 ###
+# run-example-module-disable-pr
+###
+- name: run-example-module-disable-pr
+  serial: true
+  plan:
+  - get: git
+    trigger: false
+  
+  - get: git-pull-requests
+    trigger: true
+    version: every
+  
+  - put: git-pull-requests
+    params:
+      path: git-pull-requests
+      status: pending
+
+  - task: test-example-module-disable-upgrade
+    params:
+      git_src: git
+      git_target: git-pull-requests
+      service_account_json: {{service_account_json}}
+      project_id: {{project_id}}
+      backend_bucket: {{tf_backend_bucket}}
+      backend_prefix: terraform-google-nat-gateway/
+      env_name: tf-ci-nat-module-disable
+      example_dir: examples/module-disable
+      zone: us-central1-f
+      TF_VAR_network_name: tf-ci-nat-module-disable
+      TF_VAR_region: us-central1
+      TF_VAR_zone: us-central1-f
+    on_failure:
+      put: git-pull-requests
+      params:
+        path: git-pull-requests
+        status: failure
+    file: git/tests/tasks/example-module-disable.yaml
+  
+  - task: test-example-module-disable-clean-apply
+    params:
+      git_src: git-pull-requests
+      git_target: git-pull-requests
+      service_account_json: {{service_account_json}}
+      project_id: {{project_id}}
+      backend_bucket: {{tf_backend_bucket}}
+      backend_prefix: terraform-google-nat-gateway/
+      env_name: tf-ci-nat-module-disable
+      example_dir: examples/module-disable
+      zone: us-central1-f
+      TF_VAR_network_name: tf-ci-nat-module-disable
+      TF_VAR_region: us-central1
+      TF_VAR_zone: us-central1-f
+    on_failure:
+      put: git-pull-requests
+      params:
+        path: git-pull-requests
+        status: failure
+    file: git/tests/tasks/example-module-disable.yaml
+
+###
 # Updates PR with Passed state if all jobs pass
 ###
 - name: update-pr-passed
