[example/ha-nat-gateway] convert to autossh [examples/squid-proxy test] convert to autossh [examples/] add set -x to all test scripts

--- a/tests/tasks/example-ha-nat-gateway.yaml
+++ b/tests/tasks/example-ha-nat-gateway.yaml
@@ -52,7 +52,7 @@ run:
     cat > ${SA_JSON} <<EOF
     $service_account_json
     EOF
-    apk add --update jq curl
+    apk add --update jq curl autossh
     gcloud auth activate-service-account --key-file=${SA_JSON}
     gcloud config set project $project_id
     gcloud config set compute/zone $zone
