--- a/tests/tasks/example-gke-nat-gateway-regional.yaml
+++ b/tests/tasks/example-gke-nat-gateway-regional.yaml
@@ -121,7 +121,7 @@ run:
     # Generate terraform.tfvars
     ZONE=$zone
     test -n "${ZONE}"
-    NODE_TAG=$(gcloud compute instance-templates describe $(gcloud compute instance-templates list --filter=name~gke-${CLUSTER_NAME} --limit=1 --uri) --format='get(properties.tags.items[0])')
+    NODE_TAG=$(gcloud compute instance-templates describe $(gcloud compute instance-templates list --filter=name~gke-${CLUSTER_NAME:0:20} --limit=1 --uri) --format='get(properties.tags.items[0])')
     test -n "${NODE_TAG}"
     MASTER_IP=$(gcloud compute firewall-rules describe ${NODE_TAG/-node/-ssh} --format='value(sourceRanges)')
     test -n "${MASTER_IP}"
