--- a/tests/tasks/example-ha-nat-gateway.yaml
+++ b/tests/tasks/example-ha-nat-gateway.yaml
@@ -86,7 +86,7 @@ run:
     git --no-pager show > ${EMAIL}/body-failed
 
     # Install latest terraform
-    curl -sL 	https://goo.gl/UYp3WG | bash
+    bash examples/terraform-install.sh
     source ${HOME}/.bashrc
     terraform version
 
@@ -110,8 +110,8 @@ run:
     function apply_and_run_test() {
       terraform init -no-color -upgrade=true
       terraform workspace select ${env_name} || terraform workspace new ${env_name}
-      terraform plan -lock=false -no-color
-      terraform apply -no-color -input=false -lock=false -auto-approve | tee ${EMAIL}/body-failed
+      terraform plan -lock=false -no-color -out terraform.tfplan
+      terraform apply -no-color -input=false -lock=false -auto-approve terraform.tfplan | tee ${EMAIL}/body-failed
 
       export NAT_HOST=$(terraform output nat-host)
       export REMOTE_HOST_URI=$(terraform output remote-host-uri)
